--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -22,8 +22,8 @@
 		HorizontalScrollMode="Enabled"
 		ZoomMode="Disabled">
 		<RelativePanel x:Name="LayoutRoot" 
-		  Background="AntiqueWhite"
-		  d:DataContext="{d:DesignInstance vm:SettingsVM, CreateList=True, IsDesignTimeCreatable=True}">
+			Background="AntiqueWhite"
+			d:DataContext="{d:DesignInstance vm:SettingsVM, CreateList=True, IsDesignTimeCreatable=True}">
 			<!--DataContext="{x:Bind VM, Mode=OneWay}">-->
 			<FlyoutBase.AttachedFlyout>
 				<Flyout Placement="Full" x:Name="AboutFlyout">
@@ -34,101 +34,116 @@
 			<uctl:UniversalWrapPanel Orientation="Horizontal"
 			x:Name="ActionsUWP">
 				<ctl:LolloButton
-				Tapped="OnGoBack_Tapped"
-				Symbol="Back"
-				Uid="Back2"/>
+					Tapped="OnGoBack_Tapped"
+					Symbol="Back"
+					Uid="Back2"/>
 
 				<ctl:LolloToggleButton
-				IsChecked="{Binding ElementName=me, Path=VM.MetaBriefcase.IsElevated, Mode=TwoWay, FallbackValue=false}"
-				Tapped="OnToggleElevated_Tapped"
-				CheckedSymbol="Emoji2"
-				UncheckedSymbol="Important"
-				CheckedUid="GotoSafe"
-				UncheckedUid="GotoElevated"/>
+					IsChecked="{Binding ElementName=me, Path=VM.MetaBriefcase.IsElevated, Mode=TwoWay, FallbackValue=false}"
+					Tapped="OnToggleElevated_Tapped"
+					CheckedSymbol="Emoji2"
+					UncheckedSymbol="Important"
+					CheckedUid="GotoSafe"
+					UncheckedUid="GotoElevated"/>
 
 				<ctl:LolloButton
-				Tapped="OnExport_Tapped"
-				IsEnabled="{x:Bind Path=VM.IsExportingSettings, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}"
-				Symbol="Save"
-				Uid="Export"/>
+					Tapped="OnExport_Tapped"
+					IsEnabled="{x:Bind Path=VM.IsExportingSettings, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}"
+					Symbol="Save"
+					Uid="Export"/>
 
 				<ctl:LolloButton
-				Tapped="OnImport_Tapped"
-				IsEnabled="{x:Bind Path=VM.IsImportingSettings, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}"
-				Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
-				Symbol="Import"
-				Foreground="{StaticResource FlashyForeground}"
-				Uid="Import1"/>
+					Tapped="OnImport_Tapped"
+					IsEnabled="{x:Bind Path=VM.IsImportingSettings, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}"
+					Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
+					Symbol="Import"
+					Foreground="{StaticResource FlashyForeground}"
+					Uid="Import1"/>
 
 				<ctl:LolloButton
-				Tapped="OnAbout_Tapped"
-				Symbol="Help"
-				Uid="About"/>
+					Tapped="OnAbout_Tapped"
+					Symbol="Help"
+					Uid="About"/>
 			</uctl:UniversalWrapPanel>
 
 			<Border RelativePanel.Below="ActionsUWP"
-			x:Name="ElevatedNotice"
-			Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
-			BorderBrush="{StaticResource FlashyForeground}"
-			BorderThickness="{StaticResource Thickness2222}"
-			Padding="{StaticResource Thickness8282}">
+				x:Name="ElevatedNotice"
+				Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
+				BorderBrush="{StaticResource FlashyForeground}"
+				BorderThickness="{StaticResource Thickness2222}"
+				Padding="{StaticResource Thickness8282}">
 				<TextBlock x:Uid="ElevatedMode"
-				VerticalAlignment="Stretch"
-				HorizontalAlignment="Stretch"
-				Foreground="{StaticResource FlashyForeground}"
-				TextWrapping="Wrap"/>
+					VerticalAlignment="Stretch"
+					HorizontalAlignment="Stretch"
+					Foreground="{StaticResource FlashyForeground}"
+					TextWrapping="Wrap"/>
 			</Border>
 
 			<Border RelativePanel.Below="ElevatedNotice"
-			x:Name="SafeNotice"
-			Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"
-			BorderThickness="{StaticResource Thickness2222}"
-			Padding="{StaticResource Thickness8282}">
+				x:Name="SafeNotice"
+				Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"
+				BorderThickness="{StaticResource Thickness2222}"
+				Padding="{StaticResource Thickness8282}">
 				<TextBlock x:Uid="SafeMode"
-				VerticalAlignment="Stretch"
-				HorizontalAlignment="Stretch"
-				TextWrapping="Wrap"/>
+					VerticalAlignment="Stretch"
+					HorizontalAlignment="Stretch"
+					TextWrapping="Wrap"/>
 			</Border>
 
-			<local:MetaBriefcaseView RelativePanel.Below="SafeNotice"
-			x:Name="MBView"
-            VM="{x:Bind VM, Mode=OneWay}"
-			HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
-			IsEnabled="{x:Bind IsOpen, Mode=OneWay, FallbackValue=false}"/>
+			<Border RelativePanel.Below="SafeNotice"
+				x:Name="BackgroundNotice"
+				Visibility="{x:Bind VM.BackgroundTaskHelper.UploadToOneDriveStatus.Item1, Mode=OneWay, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"
+				BorderBrush="{StaticResource FlashyForeground}"
+				BorderThickness="{StaticResource Thickness2222}"
+				Padding="{StaticResource Thickness8282}">
+				<TextBlock x:Uid="BackgroundProblem"
+					VerticalAlignment="Stretch"
+					HorizontalAlignment="Stretch"
+					Foreground="{StaticResource FlashyForeground}"
+					TextWrapping="Wrap"/>
+			</Border>
+
+			<ContentControl RelativePanel.Below="BackgroundNotice" x:Name="MBView"
+				IsEnabled="{x:Bind VM.BackgroundTaskHelper.UploadToOneDriveStatus.Item1, Mode=OneWay}">
+				<local:MetaBriefcaseView
+					VM="{x:Bind VM, Mode=OneWay}"
+					HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
+					IsEnabled="{x:Bind IsOpen, Mode=OneWay, FallbackValue=false}"/>
+			</ContentControl>
 
 			<ctl:AnimationsControl x:Name="AnimationsControl" 
-			RelativePanel.Below="SafeNotice" 
-			Canvas.ZIndex="900"/>
+				RelativePanel.Below="SafeNotice" 
+				Canvas.ZIndex="900"/>
 
 			<Rectangle Height="20" Width="20" x:Name="Spacer" RelativePanel.Below="MBView"/>
 			<!-- camera resolution -->
 			<TextBlock x:Uid="CameraResHeader" RelativePanel.Below="Spacer" x:Name="CameraResHeader"/>
 			<uctl:UniversalWrapPanel RelativePanel.Below="CameraResHeader" Orientation="Horizontal">
 				<RadioButton x:Uid="CameraResMax"
-				GroupName="CameraRes"
-				Tag="0"
-				IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='HighestAvailable', Mode=OneWay}"
-				Checked="OnCameraResChanged"/>
+					GroupName="CameraRes"
+					Tag="0"
+					IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='HighestAvailable', Mode=OneWay}"
+					Checked="OnCameraResChanged"/>
 				<RadioButton x:Uid="CameraRes5MP"
-				GroupName="CameraRes"
-				Tag="5"
-				IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='VeryLarge5M', Mode=OneWay}"
-				Checked="OnCameraResChanged"/>
+					GroupName="CameraRes"
+					Tag="5"
+					IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='VeryLarge5M', Mode=OneWay}"
+					Checked="OnCameraResChanged"/>
 				<RadioButton x:Uid="CameraResHD"
-				GroupName="CameraRes"
-				Tag="4"
-				IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='Large3M', Mode=OneWay}"
-				Checked="OnCameraResChanged"/>
+					GroupName="CameraRes"
+					Tag="4"
+					IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='Large3M', Mode=OneWay}"
+					Checked="OnCameraResChanged"/>
 				<RadioButton x:Uid="CameraResMedium"
-				GroupName="CameraRes"
-				Tag="3"
-				IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='MediumXga', Mode=OneWay}"
-				Checked="OnCameraResChanged"/>
+					GroupName="CameraRes"
+					Tag="3"
+					IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='MediumXga', Mode=OneWay}"
+					Checked="OnCameraResChanged"/>
 				<RadioButton x:Uid="CameraResSmall"
-				GroupName="CameraRes"
-				Tag="2"
-				IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='SmallVga', Mode=OneWay}"
-				Checked="OnCameraResChanged"/>
+					GroupName="CameraRes"
+					Tag="2"
+					IsChecked="{x:Bind VM.Briefcase.CameraCaptureResolution, Converter={StaticResource ParameterMatchesToTrue}, ConverterParameter='SmallVga', Mode=OneWay}"
+					Checked="OnCameraResChanged"/>
 			</uctl:UniversalWrapPanel>
 		</RelativePanel>
 	</ScrollViewer>
