--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -11,6 +11,7 @@
 	<Thickness x:Key="Thickness1111">1</Thickness>
 	<Thickness x:Key="Thickness2222">2</Thickness>
 	<Thickness x:Key="Thickness4444">4</Thickness>
+	<Thickness x:Key="Thickness8888">8</Thickness>
 
 	<GridLength x:Key="GridSize4Placeholder_Small">10</GridLength>
     <GridLength x:Key="GridSize4Placeholder_Medium">20</GridLength>
@@ -32,6 +33,11 @@
 	<x:Double x:Key="MiniatureHeight">240</x:Double>
 	<x:Double x:Key="MiniatureQuarterHeight">60</x:Double>
 
+	<GridLength x:Key="MiniatureWidthSmall_ForGrid">120</GridLength>
+	<GridLength x:Key="MiniatureHeightSmall_ForGrid">120</GridLength>
+	<x:Double x:Key="MiniatureWidthSmall">120</x:Double>
+	<x:Double x:Key="MiniatureHeightSmall">120</x:Double>
+	<x:Double x:Key="MiniatureQuarterHeightSmall">30</x:Double>
 
 	<!--<x:Double x:Key="LandscapeItemWidth">200</x:Double>-->
 	<x:Double x:Key="LandscapeItemWidth">160</x:Double>
@@ -468,8 +474,9 @@
         <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}"/>
         <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
         <Setter Property="BorderThickness" Value="{StaticResource Thickness0}"/>
-        <Setter Property="Padding" Value="{StaticResource Thickness6}"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <!--<Setter Property="Padding" Value="{StaticResource Thickness6}"/>-->
+		<Setter Property="Padding" Value="0"/>
+		<Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="Height" Value="{StaticResource LandscapeItemHeight}"/>
@@ -620,7 +627,8 @@
 		<Setter Property="Background" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}"/>
 		<Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
 		<Setter Property="BorderThickness" Value="{StaticResource Thickness0}"/>
-		<Setter Property="Padding" Value="{StaticResource Thickness6}"/>
+		<!--<Setter Property="Padding" Value="{StaticResource Thickness6}"/>-->
+		<Setter Property="Padding" Value="0"/>
 		<Setter Property="HorizontalAlignment" Value="Stretch"/>
 		<Setter Property="VerticalAlignment" Value="Center"/>
 		<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -935,7 +943,8 @@
 		<Setter Property="VerticalAlignment" Value="Top"/>
 		<Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
 		<Setter Property="FontWeight" Value="Normal"/>
-		<Setter Property="Width" Value="68"/>
+		<!--<Setter Property="Width" Value="68"/>-->
+		<Setter Property="Width" Value="Auto"/>
 		<Setter Property="UseSystemFocusVisuals" Value="True"/>
 		<Setter Property="Template">
 			<Setter.Value>
@@ -943,12 +952,17 @@
 					<Grid x:Name="Root" Background="{TemplateBinding Background}" MaxWidth="{TemplateBinding MaxWidth}" MinWidth="{TemplateBinding MinWidth}">
 						<VisualStateManager.VisualStateGroups>
 							<VisualStateGroup x:Name="ApplicationViewStates">
-								<VisualState x:Name="FullSize"/>
+								<VisualState x:Name="FullSize">
+									<Storyboard>
+										<DoubleAnimation Storyboard.TargetProperty="Width" Storyboard.TargetName="Root" To="68" Duration="0"/>
+									</Storyboard>
+								</VisualState>
 								<VisualState x:Name="Compact">
 									<Storyboard>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="TextLabel">
 											<DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
 										</ObjectAnimationUsingKeyFrames>
+										<DoubleAnimation Storyboard.TargetProperty="Width" Storyboard.TargetName="Root" To="40" Duration="0"/>
 									</Storyboard>
 								</VisualState>
 								<VisualState x:Name="Overflow">
@@ -1031,7 +1045,16 @@
 							</VisualStateGroup>
 						</VisualStateManager.VisualStateGroups>
 						<StackPanel x:Name="ContentRoot" MinHeight="{ThemeResource AppBarThemeCompactHeight}">
-							<ContentPresenter x:Name="Content" AutomationProperties.AccessibilityView="Raw" Content="{TemplateBinding Icon}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Stretch" Height="20" Margin="0,14,0,4"/>
+							<!--Margin="0,14,0,4"-->
+							<ContentPresenter x:Name="Content" AutomationProperties.AccessibilityView="Raw" 
+								Content="{TemplateBinding Icon}" 
+								Foreground="{TemplateBinding Foreground}" 
+								HorizontalAlignment="Stretch"
+								VerticalAlignment="Stretch"
+								HorizontalContentAlignment="Center"
+								VerticalContentAlignment="Center"
+								Height="20" 
+								Margin="{StaticResource Thickness8888}"/>
 							<TextBlock x:Name="TextLabel" 
 								Foreground="{TemplateBinding Foreground}" 
 								FontSize="{StaticResource SmallFontSize}"
@@ -1080,7 +1103,8 @@
 		<Setter Property="VerticalAlignment" Value="Top"/>
 		<Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
 		<Setter Property="FontWeight" Value="Normal"/>
-		<Setter Property="Width" Value="68"/>
+		<!--<Setter Property="Width" Value="68"/>-->
+		<Setter Property="Width" Value="Auto"/>
 		<Setter Property="UseSystemFocusVisuals" Value="True"/>
 		<Setter Property="Template">
 			<Setter.Value>
@@ -1088,12 +1112,17 @@
 					<Grid x:Name="Root" Background="{TemplateBinding Background}" MaxWidth="{TemplateBinding MaxWidth}" MinWidth="{TemplateBinding MinWidth}">
 						<VisualStateManager.VisualStateGroups>
 							<VisualStateGroup x:Name="ApplicationViewStates">
-								<VisualState x:Name="FullSize"/>
+								<VisualState x:Name="FullSize">
+									<Storyboard>
+										<DoubleAnimation Storyboard.TargetProperty="Width" Storyboard.TargetName="Root" To="68" Duration="0"/>
+									</Storyboard>
+								</VisualState>
 								<VisualState x:Name="Compact">
 									<Storyboard>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="TextLabel">
 											<DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
 										</ObjectAnimationUsingKeyFrames>
+										<DoubleAnimation Storyboard.TargetProperty="Width" Storyboard.TargetName="Root" To="40" Duration="0"/>
 									</Storyboard>
 								</VisualState>
 								<VisualState x:Name="Overflow">
@@ -1277,7 +1306,16 @@
 						<Rectangle x:Name="CheckedHighlightBackground" Fill="{ThemeResource SystemControlHighlightAccentBrush}" Opacity="0"/>
 						<Rectangle x:Name="AccentOverlayBackground"/>
 						<StackPanel x:Name="ContentRoot" MinHeight="{ThemeResource AppBarThemeCompactHeight}">
-							<ContentPresenter x:Name="Content" AutomationProperties.AccessibilityView="Raw" Content="{TemplateBinding Icon}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Stretch" Height="20" Margin="0,14,0,4"/>
+							<!--Margin="0,14,0,4"-->
+							<ContentPresenter x:Name="Content" AutomationProperties.AccessibilityView="Raw" 
+								Content="{TemplateBinding Icon}" 
+								Foreground="{TemplateBinding Foreground}" 
+								HorizontalAlignment="Stretch"
+								VerticalAlignment="Stretch"
+								HorizontalContentAlignment="Center"
+								VerticalContentAlignment="Center"
+								Height="20" 
+								Margin="{StaticResource Thickness8888}"/>
 							<TextBlock x:Name="TextLabel" 
 								Foreground="{TemplateBinding Foreground}" 
 								FontSize="{StaticResource SmallFontSize}" 
