--- a/UniFiler10/Views/DocumentView.xaml
+++ b/UniFiler10/Views/DocumentView.xaml
@@ -10,36 +10,47 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300"
+    d:DesignHeight="400"
     d:DesignWidth="400"
-    Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}">
+    Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}">
 
-    <!--<Grid Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}" 
-        Background="Transparent" Tapped="OnPreview_Tapped">-->
-    <!--<Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            -->
-    <!--<RowDefinition Height="Auto"/>-->
-    <!--
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>-->
-
-    <!--Background="{StaticResource SystemControlBackgroundBaseLowBrush}"-->
-    <Border
-        Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}"
+	<Border x:Name="LayoutRoot"
+        Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}"
         VerticalAlignment="Center" HorizontalAlignment="Center"
-		Background="Transparent"
+		Background="{StaticResource DiagonalNWSEBrush}"
 		Tapped="OnMainBorder_Tapped"
         Canvas.ZIndex="100"
         BorderThickness="0">
-        <!--<Border.Background>
+		<!--<Border.Background>
             <LinearGradientBrush EndPoint="0.5,.5" StartPoint="0.5,0">
                 <GradientStop Color="DarkGray" Offset="0"/>
                 <GradientStop Color="Transparent" Offset="1"/>
             </LinearGradientBrush>
         </Border.Background>-->
 
-        <Grid>
+		<VisualStateManager.VisualStateGroups>
+			<VisualStateGroup>
+				<VisualState>
+					<VisualState.StateTriggers>
+						<AdaptiveTrigger MinWindowWidth="801" x:Name="WidthTrigger"/>
+					</VisualState.StateTriggers>
+					<VisualState.Setters>
+						<Setter Target="me.IsSmallScreen" Value="False"/>
+						<!-- LOLLO NOTE I need the brackets because Grid.Column is an attached property -->
+						<!--<Setter Target="MyAltitudeProfiles.(Grid.Column)" Value="1"/>-->
+					</VisualState.Setters>
+				</VisualState>
+			</VisualStateGroup>
+		</VisualStateManager.VisualStateGroups>
+
+		<Grid>
+			<AppBarButton Icon="Save"
+				Visibility="{x:Bind IsSaveButtonEnabled, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+				Tapped="OnSave_Tapped"
+				Canvas.ZIndex="150"
+				Style="{StaticResource AppBarButtonRecoloured}"
+				Foreground="{StaticResource FlashyForeground}"/>
+
 			<AppBarButton Icon="FullScreen"
 				Visibility="{x:Bind IsViewLargeButtonEnabled, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                 Tapped="OnPreview_Tapped"
@@ -55,7 +66,7 @@
                 Foreground="{StaticResource FlashyForeground}"
                 HorizontalAlignment="Right"/>
 
-            <!--<PathIcon Data="M 0,19 V18 H19 V19 M19,19 V0 H18 V19 M4,16 V15 H16 V16 M16,16 V4 H15 V16 Z"
+			<!--<PathIcon Data="M 0,19 V18 H19 V19 M19,19 V0 H18 V19 M4,16 V15 H16 V16 M16,16 V4 H15 V16 Z"
                     Foreground="{StaticResource FlashyForeground}"
                     Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                     Canvas.ZIndex="150"
@@ -63,7 +74,7 @@
                     HorizontalAlignment="Right" VerticalAlignment="Bottom">
             </PathIcon>-->
 
-            <!--<PathIcon Data="M 0,99 V98 H99 V99 M99,99 V0 H98 V99 M80,95 V94 H95 V95 M95,95 V80 H94 V95 Z"
+			<!--<PathIcon Data="M 0,99 V98 H99 V99 M99,99 V0 H98 V99 M80,95 V94 H95 V95 M95,95 V80 H94 V95 Z"
                     Foreground="{StaticResource FlashyForeground}"
                     Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                     Canvas.ZIndex="150"
@@ -71,14 +82,14 @@
                     HorizontalAlignment="Right" VerticalAlignment="Bottom">
             </PathIcon>-->
 
-            <Path Data="M 0,29 H29 V0 M10,25 H25 V10"
+			<Path Data="M 0,29 H29 V0 M10,25 H25 V10"
                 Stroke="{StaticResource FlashyForeground}"
                 StrokeThickness="2"
                 Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                 Canvas.ZIndex="150"
                 Opacity="1"
                 HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            </Path>
+			</Path>
 
 			<!--<PathIcon Data="M 0,29 V28 H29 V29 M29,29 V0 H28 V29 M10,25 V24 H25 V25 M25,25 V10 H24 V25 Z"
                     Foreground="{StaticResource FlashyForeground}"
@@ -88,57 +99,63 @@
                     HorizontalAlignment="Right" VerticalAlignment="Bottom">
             </PathIcon>-->
 
-            <Image x:Name="ImageViewer"
-                    Canvas.ZIndex="50"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}"
-                    Stretch="Uniform"/>
+			<!--<Border x:Name="Placeholder"
+                Canvas.ZIndex="40"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}"
+				BorderThickness="0"					
+				Background="{StaticResource DiagonalNWSEBrush}"/>-->
 
-            <!--<Viewbox x:Name="WebViewBox" Stretch="UniformToFill" LOLLO Viewbox does not work with WebView
+			<Image x:Name="ImageViewer"
+                Canvas.ZIndex="50"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}"
+                Stretch="Uniform"
+				Visibility="Collapsed"/>
+
+			<!--<Viewbox x:Name="WebViewBox" Stretch="UniformToFill" LOLLO Viewbox does not work with WebView
                     Canvas.ZIndex="60"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}">-->
-            
-            <!--NavigationCompleted="WebView_NavigationCompleted"
+                    Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}">-->
+
+			<!--NavigationCompleted="WebView_NavigationCompleted"
                     NavigationFailed="WebView_NavigationFailed">-->
-            <WebView
-                    x:Name="WebViewer"
-                    Canvas.ZIndex="60"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}">
-                <!--<WebView.Clip> LOLLO also this does not work
+			<WebView
+                x:Name="WebViewer"				
+                Canvas.ZIndex="60"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Width="{x:Bind WidthAdjusted, Mode=OneWay}" Height="{x:Bind HeightAdjusted, Mode=OneWay}"
+				Visibility="Collapsed">
+				<!--<WebView.Clip> LOLLO also this does not work
                     <RectangleGeometry Rect="0 0 200 200"/>
                 </WebView.Clip>-->
-            </WebView>
-            <!--</Viewbox>-->
-        </Grid>
-    </Border>
-    <!--<TextBox Text="{Binding Uri0, Mode=OneWay}" IsReadOnly="True" Grid.Row="1"/>-->
-    <!--Source="{Binding ElementName=me, Path=DocumentVM.Uri, Mode=OneWay}"-->
-    <!--<AppBarButton Icon="Delete" Click="OnItemDelete_Click" 
-                Canvas.ZIndex="150"
-                Style="{StaticResource AppBarButtonRecoloured}"
-                IsCompact="True"
-                Foreground="{StaticResource FlashyForeground}"
-                Opacity="1"
-                HorizontalAlignment="Right" VerticalAlignment="Top"/>
-        <Image 
-            Canvas.ZIndex="50"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}"
-            x:Name="ImageViewer" Stretch="Uniform"/>
-        <WebView
-            Canvas.ZIndex="50"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}"
-            x:Name="WebView"
-            Tapped="OnWebView_Tapped"
-            NavigationCompleted="WebView_NavigationCompleted"
-            NavigationFailed="WebView_NavigationFailed"/>-->
-    <!--</Grid>-->
+			</WebView>
+			<!--</Viewbox>-->
+
+			<Border Canvas.ZIndex="200"
+				Visibility="{x:Bind Caption, Converter={StaticResource StringEmptyToCollapsedConverter}, Mode=OneWay}"
+        		VerticalAlignment="Bottom" HorizontalAlignment="Center"
+				Height="{x:Bind QuarterHeightAdjusted, Mode=OneWay}"
+				Width="{x:Bind WidthAdjusted, Mode=OneWay}"
+				Background="{StaticResource VerticalWBrush}">
+				<uctl:TextBlockScaler Canvas.ZIndex="200"
+        			VerticalAlignment="Bottom" HorizontalAlignment="Center"
+					Height="{x:Bind QuarterHeightAdjusted, Mode=OneWay}"
+					Width="{x:Bind WidthAdjusted, Mode=OneWay}">
+					<uctl:TextBlockScaler.TextBlock>
+						<TextBlock
+        					Text="{x:Bind Caption, Mode=OneWay}"
+        					Foreground="{StaticResource FlashyForeground}"
+							TextAlignment="Center"
+							Padding="{StaticResource Thickness4444}"
+        					TextWrapping="Wrap"/>
+					</uctl:TextBlockScaler.TextBlock>
+				</uctl:TextBlockScaler>
+			</Border>
+		</Grid>
+	</Border>
 </uctl:ObservableControl>
