--- a/UniFiler10/Views/WalletsView.xaml
+++ b/UniFiler10/Views/WalletsView.xaml
@@ -5,11 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
     xmlns:ctl="using:UniFiler10.Controlz"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utilz="using:Utilz"
     mc:Ignorable="d"
-    d:DesignHeight="300"
+    d:DesignHeight="600"
     d:DesignWidth="400">
 
     <Grid x:Name="LayoutRoot">
@@ -19,7 +20,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-		<ContentControl Grid.Row="0" IsEnabled="{x:Bind Path=VM.IsImportingMedia, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}">
+		<ContentControl Grid.Row="0" 
+			IsEnabled="{x:Bind Path=VM.IsImportingMedia, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}">
 			<StackPanel Orientation="Horizontal">
 				<AppBarButton
 					Icon="Camera"
